<resources>
    <string name="app_name">Inventa</string>
    <string name="button_login">Войти</string>
    <string name="hint_username">  Логин</string>
    <string name="hint_password">  Пароль</string>
    <string name="button_scan_text">Scan</string>
    <string name="baseUrl">http://188.242.160.111:8080/</string>


    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_delete">&lt;</string>
    <string name="set_pin_code">Придумайте код авторизации</string>
    <string name="enter_code">Введите код</string>
    <string name="repeat_pin_code">Подтвердите код</string>
    <string name="delete_button_desc">Delete last pin code symbol</string>
    <string name="finger_button_desc">Show fingerprint check window</string>
    <string name="settings_button_desc">App settings</string>
    <string name="searching_button_desc">Searching items</string>
    <string name="scan_qr_code_button_desc">Scan qe code of item</string>

    <string name="hint_location">Местоположение</string>
    <string name="hint_category">Категория объекта</string>
    <string name="hint_name_item">Наименование объекта</string>
    <string name="search_text">Поиск</string>
    <string name="item_title">Item</string>
    <string name="clear_all_text">Очистить все</string>

    <string name="settings_text">Настройки</string>
    <string name="settings_notification_text">Уведомления</string>
    <string name="settings_search_folders_text">Папки поиска</string>
    <string name="settings_language_text">Язык</string>

    <string name="error_text">Ошибка</string>
    <string name="scan_again_text">Cканировать снова</string>
    <string name="input_manual_text">Ввести вручную</string>
    <string name="some_wrong_text">Что-то не так</string>
</resources>