<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <TextView
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:background="@color/blue3"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingStart="20dp"
        android:paddingTop="60dp"
        android:text="@string/search_text"
        android:textColor="@color/background_almost_white"
        android:textSize="38sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextItemLocation"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/text_search"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_location"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextItemCategory"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/editTextItemLocation"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_category"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"

        android:textColorHint="@color/hint_text"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/editTextItemCategory"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_name_item"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"

        android:textColorHint="@color/hint_text"
        tools:ignore="RtlSymmetry" />

    <android.widget.Button
        android:id="@+id/btnSearchText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/editTextItemName"

        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="35sp"
        android:background="@color/blue_button"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/search_text"
        android:textAllCaps="false"

        android:textColor="@color/white"
        android:textSize="24sp" />


    <android.widget.Button
        android:id="@+id/btnClearAll"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/btnSearchText"

        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/clear_all_text"
        android:textAllCaps="false"
        android:background="@color/yellow2"

        android:textColor="@color/white"
        android:textSize="24sp" />

</RelativeLayout>