<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_almost_white"
    tools:context=".activities.LoginActivity">


    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="110sp"
        android:background="@drawable/custom_edittext"
        android:paddingStart="10dp"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"

        android:textColorHint="@color/hint_text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLogin"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"

        android:textColorHint="@color/hint_text"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"

        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="15sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button_login"
        android:textAllCaps="false"

        android:textColor="@color/white"
        android:textSize="19sp" />

</RelativeLayout>