<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTestList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutToolbar"/>

    <LinearLayout
        android:id="@+id/linearLayoutToolbar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="10sp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/searching_button_desc"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:src="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/btnScanQrCode"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="10sp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/scan_qr_code_button_desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_scan_qr_code" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="10sp"
            android:layout_marginStart="60dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/settings_button_desc"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings" />

    </LinearLayout>

</RelativeLayout>